# PromptPack

./: .gitignore  CHANGELOG.md  CHROME_WEB_STORE_CHECKLIST.md  CONTRIBUTING.md  DESKTOP_APP_PLAN.md  DOCUMENTATION.md  LICENSE  MACOS_IMPLEMENTATION.md  README.md  TODO-PRODUCTION.md  convert-extension-screenshot.js  convert-screenshots.js  create-promo-tiles.js  document.md  index.html  manifest.config.ts  marketplace_plan.md  package.json  tsconfig.app.json  verify-screenshots.js  vite.config.ts
Product demo/: package.json  tsconfig.json
api/: package.json  schema.sql  tsconfig.json  wrangler.dev.toml  wrangler.toml
app/: BUILD_MACOS.md  build-arm64.bat  build-macos.sh  build.bat  index.html  package-lock.json  package.json  run-dev.bat  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: auth.rs  commands.rs  crypto.rs  db.rs  lib.rs  main.rs
popup/: .env  auth-callback.html  auth-callback.ts  background.ts  manifest.config.ts  package.json  popup.css  popup.ts  popup_paid.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
popup-firefox/: auth-callback.html  auth-callback.ts  background.ts  index.html  manifest.config.ts  popup.css  popup.ts  temp.tar  vite.config.ts  vitest.config.ts
popup-safari/: SAFARI_BUILD_INSTRUCTIONS.md  auth-callback.html  index.html  manifest.json  service-worker-loader.js
src/: popup.css  popup.ts
web/: .gitignore  bun.lockb  bunfig.toml  convex.json  env.d.ts  next.config.ts  nixpacks.toml  package-lock.json  (+2 more)
(+268 files in other folders)
