[package]
name = "promptpack"
version = "0.1.0"
description = "PromptPack Desktop - Manage your AI prompts"
authors = ["PromptPack"]
license = "MIT"
repository = "https://github.com/sath-svg/PromptPack"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "promptpack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
flate2 = "1.0"
aes-gcm = "0.10"
sha2 = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
urlencoding = "2.1"
open = "5"
const_format = "0.2"
